objects/Data_Qualified_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Recipe__c</fullName>
        <description>The method of tracking point of sale.</description>
        <inlineHelpText>The method of tracking point of sale.</inlineHelpText>
        <label>Recipe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM__c</fullName>
        <description>Serviced Available Market</description>
        <inlineHelpText>Serviced Available Market</inlineHelpText>
        <label>SAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Accepted__c</fullName>
        <description>Date/time Status was set to Sales Accepted</description>
        <label>Sales Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <description>The overall Schedule of the project including key players and timing.</description>
        <inlineHelpText>The overall Schedule of the project including key players and timing.</inlineHelpText>
        <label>Schedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>The overall Scope of the project, including key players and equipment needs</description>
        <inlineHelpText>The overall Scope of the project, including key players and equipment needs</inlineHelpText>
        <label>Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Circuit_rating_of_the_HV_circuit_b__c</fullName>
        <label>Short-Circuit rating of the HV circuit b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Identified</fullName>
                </value>
                <value>
                    <fullName>Introduction</fullName>
                </value>
                <value>
                    <fullName>Specification Review</fullName>
                </value>
                <value>
                    <fullName>Technical Presentation</fullName>
                </value>
                <value>
                    <fullName>Procurement Meeting</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Bus_Span_length__c</fullName>
        <label>Standard Bus Span (length)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storm_Name__c</fullName>
        <description>Name of the current storm causing the outage</description>
        <inlineHelpText>Name of the current storm causing the outage</inlineHelpText>
        <label>Storm Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substation_Constant_Current_Rating__c</fullName>
        <label>Substation Constant Current Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substation_Type__c</fullName>
        <label>Substation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transmission</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substation_Voltage__c</fullName>
        <description>Substation Voltage</description>
        <label>Substation Voltage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Potential_Value__c</fullName>
        <label>TE Potential Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Timing__c</fullName>
        <description>When do the TE products needed to be on site?</description>
        <inlineHelpText>When do the TE products needed to be on site?</inlineHelpText>
        <label>TE Timing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Approval_Date__c</fullName>
        <description>Date of which the Approval should be complete</description>
        <inlineHelpText>Date of which the Approval should be complete</inlineHelpText>
        <label>Target Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_FY_1_Booked_Value__c</fullName>
        <description>Bookings for the year after the initial Fiscal Year the target is identified.</description>
        <inlineHelpText>Bookings for the year after the initial Fiscal Year the target is identified.</inlineHelpText>
        <label>Target FY+1 Booked Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_FY_2_Booked_Value__c</fullName>
        <description>Bookings for two years after the initial Fiscal Year the target is identified.</description>
        <inlineHelpText>Bookings for two years after the initial Fiscal Year the target is identified.</inlineHelpText>
        <label>Target FY+2 Booked Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_FY_Booked_Value__c</fullName>
        <description>Bookings for the initial Fiscal Year that the target is identified.</description>
        <inlineHelpText>Bookings for the initial Fiscal Year that the target is identified.</inlineHelpText>
        <label>Target FY Booked Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_ID__c</fullName>
        <description>The Target ID used by Sales Operations.</description>
        <label>Target ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Product or Product Group identified as the target for the approval</description>
        <inlineHelpText>Product or Product Group identified as the target for the approval</inlineHelpText>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Length__c</fullName>
        <description>Total Length (in miles)</description>
        <inlineHelpText>Total Length (in miles)</inlineHelpText>
        <label>Total Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Project_Investment_Value__c</fullName>
        <description>Overall Total Project Investment Value</description>
        <inlineHelpText>Overall Total Project Investment Value</inlineHelpText>
        <label>Total Project Investment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Umbrella_Name__c</fullName>
        <description>The overall project name (When there are multiple parts to a project)</description>
        <inlineHelpText>The overall project name (When there are multiple parts to a project)</inlineHelpText>
        <label>Umbrella Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underground_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underground Line?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <description>Unit</description>
        <inlineHelpText>Unit</inlineHelpText>
        <label>Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Name__c</fullName>
        <description>Name of the Utility involved</description>
        <inlineHelpText>Name of the Utility involved</inlineHelpText>
        <label>Utility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Type__c</fullName>
        <label>Weather Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cause__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Heat</fullName>
                </value>
                <value>
                    <fullName>Ice</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Qualified Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>DQL_Status__c</columns>
        <columns>DQL_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Data_Qualified_Leads</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Data Qualified Leads</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DQL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Qualified Leads</pluralLabel>
    <recordTypes>
        <fullName>Approvals</fullName>
        <active>true</active>
        <label>Approvals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Share_Gain</fullName>
        <active>true</active>
        <label>Market Share Gain</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outage_Tracking</fullName>
        <active>true</active>
        <label>Outage Tracking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Qualified_Lead</fullName>
        <active>true</active>
        <label>Project Qualified Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Slow_Moving_Inventory</fullName>
        <active>true</active>
        <label>Slow Moving Inventory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>